更改自动构建和git屏幕目录

--- a/.gitignore
+++ b/.gitignore
@@ -1,261 +1,4 @@
 node_modules
-src/.vuepress/.cache/deps/_metadata.json
-src/.vuepress/.cache/deps/@vue_devtools-api.js
-src/.vuepress/.cache/deps/@vue_devtools-api.js.map
-src/.vuepress/.cache/deps/@vuepress_shared.js
-src/.vuepress/.cache/deps/@vuepress_shared.js.map
-src/.vuepress/.cache/deps/@waline_client___autosize.js
-src/.vuepress/.cache/deps/@waline_client___autosize.js.map
-src/.vuepress/.cache/deps/@waline_client___recaptcha-v3.js
-src/.vuepress/.cache/deps/@waline_client___recaptcha-v3.js.map
-src/.vuepress/.cache/deps/blockDiagram-9f4a6865-JQKIDJFJ.js
-src/.vuepress/.cache/deps/blockDiagram-9f4a6865-JQKIDJFJ.js.map
-src/.vuepress/.cache/deps/c4Diagram-ae766693-EJRJJIJ2.js
-src/.vuepress/.cache/deps/c4Diagram-ae766693-EJRJJIJ2.js.map
-src/.vuepress/.cache/deps/chunk-4IMLKAW2.js
-src/.vuepress/.cache/deps/chunk-4IMLKAW2.js.map
-src/.vuepress/.cache/deps/chunk-4XMMXOEJ.js
-src/.vuepress/.cache/deps/chunk-4XMMXOEJ.js.map
-src/.vuepress/.cache/deps/chunk-7AAEMYIC.js
-src/.vuepress/.cache/deps/chunk-7AAEMYIC.js.map
-src/.vuepress/.cache/deps/chunk-D2YVLGJ5.js
-src/.vuepress/.cache/deps/chunk-D2YVLGJ5.js.map
-src/.vuepress/.cache/deps/chunk-F63XIEUZ.js
-src/.vuepress/.cache/deps/chunk-F63XIEUZ.js.map
-src/.vuepress/.cache/deps/chunk-GAKH7KNX.js
-src/.vuepress/.cache/deps/chunk-GAKH7KNX.js.map
-src/.vuepress/.cache/deps/chunk-HXABWRJ3.js
-src/.vuepress/.cache/deps/chunk-HXABWRJ3.js.map
-src/.vuepress/.cache/deps/chunk-JMVK5GCR.js
-src/.vuepress/.cache/deps/chunk-JMVK5GCR.js.map
-src/.vuepress/.cache/deps/chunk-M3EJHWDS.js
-src/.vuepress/.cache/deps/chunk-M3EJHWDS.js.map
-src/.vuepress/.cache/deps/chunk-M6GIAQPB.js
-src/.vuepress/.cache/deps/chunk-M6GIAQPB.js.map
-src/.vuepress/.cache/deps/chunk-PNZW3DOP.js
-src/.vuepress/.cache/deps/chunk-PNZW3DOP.js.map
-src/.vuepress/.cache/deps/chunk-PR4QN5HX.js
-src/.vuepress/.cache/deps/chunk-PR4QN5HX.js.map
-src/.vuepress/.cache/deps/chunk-YPIIENQ3.js
-src/.vuepress/.cache/deps/chunk-YPIIENQ3.js.map
-src/.vuepress/.cache/deps/chunk-ZRZ4CPYY.js
-src/.vuepress/.cache/deps/chunk-ZRZ4CPYY.js.map
-src/.vuepress/.cache/deps/classDiagram-fb54d2a0-VDY7DTUK.js
-src/.vuepress/.cache/deps/classDiagram-fb54d2a0-VDY7DTUK.js.map
-src/.vuepress/.cache/deps/classDiagram-v2-a2b738ad-CX7I3KPA.js
-src/.vuepress/.cache/deps/classDiagram-v2-a2b738ad-CX7I3KPA.js.map
-src/.vuepress/.cache/deps/erDiagram-09d1c15f-L7CVI4FX.js
-src/.vuepress/.cache/deps/erDiagram-09d1c15f-L7CVI4FX.js.map
-src/.vuepress/.cache/deps/flowchart-elk-definition-ae0efee6-3DDX2GIO.js
-src/.vuepress/.cache/deps/flowchart-elk-definition-ae0efee6-3DDX2GIO.js.map
-src/.vuepress/.cache/deps/flowDiagram-b222e15a-TBHEWZ6P.js
-src/.vuepress/.cache/deps/flowDiagram-b222e15a-TBHEWZ6P.js.map
-src/.vuepress/.cache/deps/flowDiagram-v2-13329dc7-IIS5OXKN.js
-src/.vuepress/.cache/deps/flowDiagram-v2-13329dc7-IIS5OXKN.js.map
-src/.vuepress/.cache/deps/ganttDiagram-b62c793e-BJ4XK25Z.js
-src/.vuepress/.cache/deps/ganttDiagram-b62c793e-BJ4XK25Z.js.map
-src/.vuepress/.cache/deps/gitGraphDiagram-942e62fe-JET7GZO2.js
-src/.vuepress/.cache/deps/gitGraphDiagram-942e62fe-JET7GZO2.js.map
-src/.vuepress/.cache/deps/infoDiagram-94cd232f-4ICNEQJN.js
-src/.vuepress/.cache/deps/infoDiagram-94cd232f-4ICNEQJN.js.map
-src/.vuepress/.cache/deps/journeyDiagram-6625b456-Z4DGKXJR.js
-src/.vuepress/.cache/deps/journeyDiagram-6625b456-Z4DGKXJR.js.map
-src/.vuepress/.cache/deps/katex-POBA6DGL.js
-src/.vuepress/.cache/deps/katex-POBA6DGL.js.map
-src/.vuepress/.cache/deps/mermaid.js
-src/.vuepress/.cache/deps/mermaid.js.map
-src/.vuepress/.cache/deps/mindmap-definition-307c710a-USQ65HVM.js
-src/.vuepress/.cache/deps/mindmap-definition-307c710a-USQ65HVM.js.map
-src/.vuepress/.cache/deps/package.json
-src/.vuepress/.cache/deps/pieDiagram-bb1d19e5-J3ZQTJ2V.js
-src/.vuepress/.cache/deps/pieDiagram-bb1d19e5-J3ZQTJ2V.js.map
-src/.vuepress/.cache/deps/quadrantDiagram-c759a472-VHLRPMZP.js
-src/.vuepress/.cache/deps/quadrantDiagram-c759a472-VHLRPMZP.js.map
-src/.vuepress/.cache/deps/requirementDiagram-87253d64-JGNMATSL.js
-src/.vuepress/.cache/deps/requirementDiagram-87253d64-JGNMATSL.js.map
-src/.vuepress/.cache/deps/sankeyDiagram-707fac0f-C4E5FAEN.js
-src/.vuepress/.cache/deps/sankeyDiagram-707fac0f-C4E5FAEN.js.map
-src/.vuepress/.cache/deps/sequenceDiagram-6894f283-JUELNG3D.js
-src/.vuepress/.cache/deps/sequenceDiagram-6894f283-JUELNG3D.js.map
-src/.vuepress/.cache/deps/stateDiagram-5dee940d-AV3FUXW6.js
-src/.vuepress/.cache/deps/stateDiagram-5dee940d-AV3FUXW6.js.map
-src/.vuepress/.cache/deps/stateDiagram-v2-1992cada-UWO3SHKM.js
-src/.vuepress/.cache/deps/stateDiagram-v2-1992cada-UWO3SHKM.js.map
-src/.vuepress/.cache/deps/timeline-definition-bf702344-XP5KIZXL.js
-src/.vuepress/.cache/deps/timeline-definition-bf702344-XP5KIZXL.js.map
-src/.vuepress/.cache/deps/vue-router.js
-src/.vuepress/.cache/deps/vue-router.js.map
-src/.vuepress/.cache/deps/vue.js
-src/.vuepress/.cache/deps/vue.js.map
-src/.vuepress/.cache/deps/xychartDiagram-f11f50a6-YSQ57EKE.js
-src/.vuepress/.cache/deps/xychartDiagram-f11f50a6-YSQ57EKE.js.map
-src/.vuepress/.temp/components/config.js
-src/.vuepress/.temp/internal/clientConfigs.js
-src/.vuepress/.temp/internal/routes.js
-src/.vuepress/.temp/internal/siteData.js
-src/.vuepress/.temp/internal/themeData.js
-src/.vuepress/.temp/md-enhance/config.js
-src/.vuepress/.temp/md-enhance/revealjs-plugins.js
-src/.vuepress/.temp/md-enhance/revealjs-theme.scss
-src/.vuepress/.temp/pages/404.html.js
-src/.vuepress/.temp/pages/404.html.vue
-src/.vuepress/.temp/pages/index.html.js
-src/.vuepress/.temp/pages/index.html.vue
-src/.vuepress/.temp/pages/about/contribute.html.js
-src/.vuepress/.temp/pages/about/contribute.html.vue
-src/.vuepress/.temp/pages/about/history.html.js
-src/.vuepress/.temp/pages/about/history.html.vue
-src/.vuepress/.temp/pages/about/index.html.js
-src/.vuepress/.temp/pages/about/index.html.vue
-src/.vuepress/.temp/pages/about/thinks.html.js
-src/.vuepress/.temp/pages/about/thinks.html.vue
-src/.vuepress/.temp/pages/composition/index.html.js
-src/.vuepress/.temp/pages/composition/index.html.vue
-src/.vuepress/.temp/pages/composition/accord/index.html.js
-src/.vuepress/.temp/pages/composition/accord/index.html.vue
-src/.vuepress/.temp/pages/composition/alone/index.html.js
-src/.vuepress/.temp/pages/composition/alone/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/index.html.js
-src/.vuepress/.temp/pages/composition/cd/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/00/index.html.js
-src/.vuepress/.temp/pages/composition/cd/00/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/00/public.html.js
-src/.vuepress/.temp/pages/composition/cd/00/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/01/index.html.js
-src/.vuepress/.temp/pages/composition/cd/01/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/01/public.html.js
-src/.vuepress/.temp/pages/composition/cd/01/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/02/index.html.js
-src/.vuepress/.temp/pages/composition/cd/02/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/02/public.html.js
-src/.vuepress/.temp/pages/composition/cd/02/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/03/index.html.js
-src/.vuepress/.temp/pages/composition/cd/03/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/03/public.html.js
-src/.vuepress/.temp/pages/composition/cd/03/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/04/index.html.js
-src/.vuepress/.temp/pages/composition/cd/04/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/04/public.html.js
-src/.vuepress/.temp/pages/composition/cd/04/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/05/index.html.js
-src/.vuepress/.temp/pages/composition/cd/05/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/05/public.html.js
-src/.vuepress/.temp/pages/composition/cd/05/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/06/index.html.js
-src/.vuepress/.temp/pages/composition/cd/06/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/06/public.html.js
-src/.vuepress/.temp/pages/composition/cd/06/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/07/index.html.js
-src/.vuepress/.temp/pages/composition/cd/07/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/07/public.html.js
-src/.vuepress/.temp/pages/composition/cd/07/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/08/index.html.js
-src/.vuepress/.temp/pages/composition/cd/08/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/08/public.html.js
-src/.vuepress/.temp/pages/composition/cd/08/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/10/index.html.js
-src/.vuepress/.temp/pages/composition/cd/10/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/10/public.html.js
-src/.vuepress/.temp/pages/composition/cd/10/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/11/index.html.js
-src/.vuepress/.temp/pages/composition/cd/11/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/11/public.html.js
-src/.vuepress/.temp/pages/composition/cd/11/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/12/index.html.js
-src/.vuepress/.temp/pages/composition/cd/12/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/12/public.html.js
-src/.vuepress/.temp/pages/composition/cd/12/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/14/index.html.js
-src/.vuepress/.temp/pages/composition/cd/14/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/14/public.html.js
-src/.vuepress/.temp/pages/composition/cd/14/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/16/index.html.js
-src/.vuepress/.temp/pages/composition/cd/16/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/16/public.html.js
-src/.vuepress/.temp/pages/composition/cd/16/public.html.vue
-src/.vuepress/.temp/pages/composition/cd/22/index.html.js
-src/.vuepress/.temp/pages/composition/cd/22/index.html.vue
-src/.vuepress/.temp/pages/composition/cd/22/public.html.js
-src/.vuepress/.temp/pages/composition/cd/22/public.html.vue
-src/.vuepress/.temp/pages/composition/ep/index.html.js
-src/.vuepress/.temp/pages/composition/ep/index.html.vue
-src/.vuepress/.temp/pages/composition/idea/index.html.js
-src/.vuepress/.temp/pages/composition/idea/index.html.vue
-src/.vuepress/.temp/pages/composition/ost/index.html.js
-src/.vuepress/.temp/pages/composition/ost/index.html.vue
-src/.vuepress/.temp/pages/composition/others/index.html.js
-src/.vuepress/.temp/pages/composition/others/index.html.vue
-src/.vuepress/.temp/pages/culture/index.html.js
-src/.vuepress/.temp/pages/culture/index.html.vue
-src/.vuepress/.temp/pages/culture/join_us.html.js
-src/.vuepress/.temp/pages/culture/join_us.html.vue
-src/.vuepress/.temp/pages/culture/link.html.js
-src/.vuepress/.temp/pages/culture/link.html.vue
-src/.vuepress/.temp/pages/culture/org.html.js
-src/.vuepress/.temp/pages/culture/org.html.vue
-src/.vuepress/.temp/pages/culture/pink.html.js
-src/.vuepress/.temp/pages/culture/pink.html.vue
-src/.vuepress/.temp/pages/others/index.html.js
-src/.vuepress/.temp/pages/others/index.html.vue
-src/.vuepress/.temp/pages/others/endorsement/index.html.js
-src/.vuepress/.temp/pages/others/endorsement/index.html.vue
-src/.vuepress/.temp/pages/others/interview/index.html.js
-src/.vuepress/.temp/pages/others/interview/index.html.vue
-src/.vuepress/.temp/pages/others/trophy/index.html.js
-src/.vuepress/.temp/pages/others/trophy/index.html.vue
-src/.vuepress/.temp/pages/posted/index.html.js
-src/.vuepress/.temp/pages/posted/index.html.vue
-src/.vuepress/.temp/pages/posted/sns.html.js
-src/.vuepress/.temp/pages/posted/sns.html.vue
-src/.vuepress/.temp/pages/posted/time.html.js
-src/.vuepress/.temp/pages/posted/time.html.vue
-src/.vuepress/.temp/pages/show/index.html.js
-src/.vuepress/.temp/pages/show/index.html.vue
-src/.vuepress/.temp/pages/show/Concert/index.html.js
-src/.vuepress/.temp/pages/show/Concert/index.html.vue
-src/.vuepress/.temp/pages/show/Concert/2002TheOne/index.html.js
-src/.vuepress/.temp/pages/show/Concert/2002TheOne/index.html.vue
-src/.vuepress/.temp/pages/show/Concert/2004incomparable/index.html.js
-src/.vuepress/.temp/pages/show/Concert/2004incomparable/index.html.vue
-src/.vuepress/.temp/pages/show/Concert/2007WorldTours/index.html.js
-src/.vuepress/.temp/pages/show/Concert/2007WorldTours/index.html.vue
-src/.vuepress/.temp/pages/show/Concert/2010TheEra/index.html.js
-src/.vuepress/.temp/pages/show/Concert/2010TheEra/index.html.vue
-src/.vuepress/.temp/pages/show/Concert/2013OpusJay/index.html.js
-src/.vuepress/.temp/pages/show/Concert/2013OpusJay/index.html.vue
-src/.vuepress/.temp/pages/show/Concert/2016Invincible/index.html.js
-src/.vuepress/.temp/pages/show/Concert/2016Invincible/index.html.vue
-src/.vuepress/.temp/pages/show/Concert/2019carnival/2024Malaysia.html.js
-src/.vuepress/.temp/pages/show/Concert/2019carnival/2024Malaysia.html.vue
-src/.vuepress/.temp/pages/show/Concert/2019carnival/2024nanjing.html.js
-src/.vuepress/.temp/pages/show/Concert/2019carnival/2024nanjing.html.vue
-src/.vuepress/.temp/pages/show/Concert/2019carnival/2024shenzhen.html.js
-src/.vuepress/.temp/pages/show/Concert/2019carnival/2024shenzhen.html.vue
-src/.vuepress/.temp/pages/show/Concert/2019carnival/2024Singapore.html.js
-src/.vuepress/.temp/pages/show/Concert/2019carnival/2024Singapore.html.vue
-src/.vuepress/.temp/pages/show/Concert/2019carnival/index.html.js
-src/.vuepress/.temp/pages/show/Concert/2019carnival/index.html.vue
-src/.vuepress/.temp/pages/show/business/index.html.js
-src/.vuepress/.temp/pages/show/business/index.html.vue
-src/.vuepress/.temp/pages/show/live/index.html.js
-src/.vuepress/.temp/pages/show/live/index.html.vue
-src/.vuepress/.temp/pages/show/public/index.html.js
-src/.vuepress/.temp/pages/show/public/index.html.vue
-src/.vuepress/.temp/pages/video/index.html.js
-src/.vuepress/.temp/pages/video/index.html.vue
-src/.vuepress/.temp/pages/video/movie/index.html.js
-src/.vuepress/.temp/pages/video/movie/index.html.vue
-src/.vuepress/.temp/pages/video/tv/index.html.js
-src/.vuepress/.temp/pages/video/tv/index.html.vue
-src/.vuepress/.temp/sass-palette/hope-config.scss
-src/.vuepress/.temp/sass-palette/hope-inject.scss
-src/.vuepress/.temp/sass-palette/hope-palette.scss
-src/.vuepress/.temp/sass-palette/hope-style.scss
-src/.vuepress/.temp/sass-palette/load-hope.js
-src/.vuepress/.temp/search-pro/index.js
-src/.vuepress/.temp/search-pro/root.js
-src/.vuepress/.temp/search-pro/store.js
-src/.vuepress/.temp/theme-hope/config.js
-src/.vuepress/.temp/theme-hope/highlighter.scss
-src/.vuepress/.temp/theme-hope/sidebar.js
-src/.vuepress/.temp/vite-root/index.html
+.temp
+.cache
+*/.vuepress/dist/
