--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@waline/client": "^3.4.1",
     "mermaid": "^10.9.3",
     "reveal.js": "^5.1.0",
+    "sass-embedded": "^1.85.1",
     "vue": "^3.5.13",
     "vuepress": "2.0.0-rc.18",
     "vuepress-plugin-china-search-console": "2.1.5",
