--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
     "docs:update-package": "pnpm dlx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.20",
-    "@vuepress/plugin-docsearch": "2.0.0-rc.85",
-    "@vuepress/plugin-revealjs": "2.0.0-rc.85",
+    "@vuepress/bundler-vite": "2.0.0-rc.21",
+    "@vuepress/plugin-docsearch": "2.0.0-rc.95",
+    "@vuepress/plugin-revealjs": "2.0.0-rc.95",
+    "@vuepress/plugin-slimsearch": "2.0.0-rc.94",
     "@waline/client": "^3.5.6",
     "mermaid": "^10.9.3",
-    "reveal.js": "^5.2.0",
-    "sass-embedded": "^1.86.0",
+    "reveal.js": "^5.2.1",
+    "sass-embedded": "^1.86.3",
     "vue": "^3.5.13",
-    "vuepress": "2.0.0-rc.20",
+    "vuepress": "2.0.0-rc.21",
     "vuepress-plugin-china-search-console": "2.1.5",
-    "vuepress-theme-hope": "2.0.0-rc.74"
+    "vuepress-theme-hope": "2.0.0-rc.82"
+  },
+  "dependencies": {
+    "execa": "8.0.1"
   }
 }
