--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.21",
     "@vuepress/plugin-docsearch": "2.0.0-rc.95",
+    "@vuepress/plugin-git": "^2.0.0-rc.96",
     "@vuepress/plugin-revealjs": "2.0.0-rc.95",
     "@vuepress/plugin-slimsearch": "2.0.0-rc.94",
     "@waline/client": "^3.5.6",
-    "mermaid": "^10.9.3",
+    "mermaid": "^11.6.0",
     "reveal.js": "^5.2.1",
     "sass-embedded": "^1.86.3",
     "vue": "^3.5.13",
