--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vuepress/bundler-vite": "2.0.0-rc.21",
     "@vuepress/plugin-docsearch": "2.0.0-rc.95",
     "@vuepress/plugin-git": "^2.0.0-rc.96",
+    "@vuepress/plugin-redirect": "2.0.0-rc.108",
     "@vuepress/plugin-revealjs": "2.0.0-rc.95",
     "@vuepress/plugin-slimsearch": "2.0.0-rc.94",
     "@waline/client": "^3.5.6",
